--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
       support@milestone.ai.
     </p>
 
+    <h2>Account Deletion</h2>
+
+    <p>
+      To Delete your account please mail us at ranaadeeltahir@gmail.com with
+      your email address and name request accoutn Deletion
+    </p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
